--- a/On tap 1.html
+++ b/On tap 1.html
@@ -15,7 +15,7 @@
 <button id="sortArray" onclick="sortArray()">Sắp xếp các phần tử của mảng tăng dần</button>
 <button id="insertNumber" onclick="insertNumber()">Chèn X vào mảng</button>
 <br>
-<p>Kiểm tra số lử dương: <span id="inputNum"></span></p>
+<p>Kiểm tra số lẻ dương: <span id="inputNum"></span></p>
 <p>Kiểm tra số nguyên tố: <span id="prime"></span></p>
 <p>Hiển thị các số nguyên tố đầu: <span id="numberPrime"></span></p>
 <p>Mảng vừa nhập: <span id="inputArr"></span></p>
@@ -23,7 +23,7 @@
 <p>Số vừa nhập có nằm trong mảng: <span id="checkNum"></span></p>
 <p>Mảng sau khi xoá N: <span id="deleteNum"></span></p>
 <p>Sắp xếp mảng theo thứ tự tăng dần: <span id="sortArr"></span></p>
-<p>Mảng sau khi chèn <span id="insertNum"></span></p>
+<p>Mảng sau khi chèn: <span id="insertNum"></span></p>
 <script>
     let n;
     function inputNumber(){
